syntax = "proto3";

package todo;
// this option helps in the code generation, changing the package name of the generated file
// to whatever you specify,
option go_package ="pb";

message TodoMessage {
    string title = 1;
    bool done = 2;
}

message TodoRequest {
    TodoMessage task = 1;
}

message TodoResponse {
    repeated TodoMessage Tasks = 1;
}

// Empty Message to be used when no Message is required.
message Empty {}

service TodoService {
    rpc AddTask (TodoRequest) returns (TodoRequest);
    rpc ListTasks (Empty) returns (TodoResponse);
}